adding refactored resume material onto portfolio

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
             data-placement="top" data-trigger="hover" data-content="Github">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://stackoverflow.com/users/11302449/volksrat71?tab=profile" target="_blank"
+          <!-- <a href="https://stackoverflow.com/users/11302449/volksrat71?tab=profile" target="_blank"
             data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover"
             data-content="Stack Overflow">
             <i class="fab fa-stack-overflow"></i>
-          </a>
+          </a> -->
           <a href="./document/NathanielRyanResume.pdf" target="_blank" data-container="body" data-toggle="popover"
             data-placement="top" data-trigger="hover" data-content="Download My Resume" download>
             <i class="fas fa-file-download"></i>
@@ -111,40 +111,54 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Fullstack Web Development Instructor</h3>
-            <div class="subheading mb-3">2u/Trilogy Education</div>
+            <h3 class="mb-0">Full-Stack Instructional Member</h3>
+            <div class="subheading mb-3">2U/Trilogy Education Services</div>
 
-            <h5>FULLSTACK LEARNING ASSISTANT, 03/2020 – Present</h5>
-            <p style="font-style: italic;">Technologies Taught: HTML, CSS, JavaScript, jQuery, Bootstrap, Handlebars,
-              React.js, MySQL, MongoDB, Node.js, Express.js, GraphQL, Redux, Application Security and Session
-              Storage/User, Local storage, Browser Cookies, Authentication, OAuth and Passport.</p>
-
-            <p>Utilize Beta Slack support application (Trilobot) to provide written technical and conceptual responses
-              to student
-              inquiries. Assist students over video call to ensure ticket resolution. Provide feedback to technical
-              development teams
-              on application modification requests based on user experience.</p>
+            <h5>Teaching Assistant, Dec. 2020 - Present</h5>
+            <p style="font-style: italic;">University of California, Berkeley</p>
             <ul>
+              <li>
+                Provide support and guidance to students attending University of California Full-Stack Web Development
+                program
+              </li>
+              <li>
+                Reinforce lesson material presented by the lead instructor by helping students with questions and
+                reviewing material
+                one-on-one or in a small group
+              </li>
+              <li>
+                Lead class reviews, discussions, and whiteboarding challenges to ensure students gain employer
+                competitive skills </li>
+            </ul>
+
+
+            <h5>Learning Assistant, Mar. 2020 - Present</h5>
+            <p style="font-style: italic;">International Support</p>
+            <ul>
+              <li>Utilize Beta Slack support application (Trilobot) to provide written technical and conceptual
+                responses to student
+                inquiries. Assist students over video call to ensure ticket resolution
+              </li>
               <li>Collaborate with team members remotely to provide web development support to 5,000+ university
-                students across the United States, UK, and Australia.</li>
+                students across
+                the United States, UK, and Australia
+              </li>
             </ul>
 
-
-            <h5>PRIMARY FULLSTACK TEACHING ASSISTANT, 04/2020 – 11/2020</h5>
-            <p>Maintain professional relationships with students and instructional staff at UC Berkeley for full-stack
-              web
-              development cohort. Provide feedback to curriculum development and technical support teams to improve
-              classroom experience for students and staff.</p>
+            <h5>Teaching Assistant, Mar. 2020 – Nov. 2020</h5>
+            <p style="font-style: italic;">University of California, Berkeley</p>
             <ul>
-              <li>Provide technical support and guidance and grade assignments for 40+ students.</li>
-              <li>Promoted to Primary Teaching Assistant within 2 months of initial hire with excellent work reviews.
+              <li>Maintained professional relationships with students and instructional staff at UC Berkeley for
+                full-stack web
+                development cohort
               </li>
-              <li>Completed course 11/01/2020 with great reviews from staff and students.
+              <li>Provide feedback to curriculum development and technical support teams to improve classroom experience
+                for
+                students and staff
+              </li>
+              <li>Completed course 11/01/2020 with great reviews from staff and students
               </li>
             </ul>
-
-            <h5>SUBSTITUTE FULLSTACK TEACHING ASSISTANT, 02/2020 – 10/2020</h5>
-            <p>Substitute Teaching Assistant at the University of Oregon for full-stack web development cohorts.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">February 2020 - Present</span>
@@ -164,7 +178,7 @@
             <h3 class="mb-0"><a href="https://github.com/VolksRat71/certs/blob/master/NathanielRyan.pdf" target="_blank"
                 data-toggle="popover" data-placement="top" data-trigger="hover"
                 data-content="View Credential">University of Oregon</a></h3>
-            <div class="subheading mb-3">Fullstack JavaScript Course</div>
+            <div class="subheading mb-3">Full-Stack Web Development Bootcamp</div>
             <p>Completed a course provided by University of Oregon on fundamentals and basics of Full Stack Software
               engineering. Specific areas of study include Javascript functionality in HTML and CSS with training in
               MySQL and Mongo
@@ -187,43 +201,28 @@
         <h2 class="mb-5">Projects</h2>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0"><a href="https://github.com/VolksRat71/advancedReact" target="_blank" data-container="body"
+                data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Link to Repository">
+                NOT SUPREME</a></h3>
+            <div class="subheading mb-3">React, Apollo Client, GraphQL Yoga, Prisma ORM & DB</div>
+            <ul>
+              <li>Developing a Full-Stack online clothing store complete with real credit checkout
+              </li>
+              <li>Users can search, sell, add to cart and checkout their favorite items</li>
+              <li>Application features many server-side functionalities such as JSON Web Tokens, permissions, sending
+                emails,
+                uploading images, and charging credit cards</li>
+            </ul>
+            <br>
             <h3 class="mb-0"><a href="https://github.com/VolksRat71/DJI_drone_controller" target="_blank"
                 data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover"
                 data-content="Link to Repository">
                 DJI Drone Controller</a></h3>
-            <div class="subheading mb-3">React.js, Node.js, Socket.io</div>
-            <p>Personal project, application with React.js frontend & Node.js backend that gives User Control of a DJI
-              Tello drone via the browser.</p>
+            <div class="subheading mb-3">React, Node, Socket.io</div>
             <ul>
-              <li>Created communications between drone's I.P address, Node.js server, & React.js User Experience.</li>
-              <li>Achieved 3D rendering (pitch, yaw, roll), battery state, drone responses by formatting a string
-                streamed from drone.</li>
-            </ul>
-            <br>
-            <h3 class="mb-0"><a href="https://github.com/VolksRat71/emit" target="_blank" data-container="body"
-                data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Link to Repository">
-                Emit Mobile App</a></h3>
-            <div class="subheading mb-3">React Native, Google Firebase</div>
-            <p>Project roles included Data Storage, User Authentication, Test Environment Specialist, User
-              Experience & Project Manager. A mobile application developed with React Native that allows a user
-              to enter chatrooms based upon a sport topic.</p>
-            <ul>
-              <li>Led a group of 5 application developers, delegated roles in the project, determined deadlines, helped
-                contributors with general questions.</li>
-              <li>Studied & properly executed a foreign framework in 3 weeks.</li>
-            </ul>
-            <br>
-            <h3 class="mb-0"><a href="https://github.com/VolksRat71/Seller2Cellar" target="_blank" data-container="body"
-                data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Link to Repository">
-                Cellar2Seller</a></h3>
-            <div class="subheading mb-3">Handlebars MVC, Sequelize ORM, Node.js</div>
-            <p>Project roles included Frontend & User Experience. A Social Media/eCommerce hybrid for users to buy &
-              sell wine, update other users with a "status" for wines added to their collection, vineyards visited, etc.
-            </p>
-            <ul>
-              <li>Motivated other group members & collaborated with them to assign tasks according to their skillset.
-              </li>
-              <li>Created a functional application within a 2-week span.
+              <li>Application creates communication between the drones I.P Address, Node Server, and React User
+                interface</li>
+              <li>Achieved 3d Rendering of drone position (pitch, yaw, roll) using transform in styled components
               </li>
             </ul>
             <br>
