portfolio refects Resume

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Full-Stack Instructional Member</h3>
+            <h3 class="mb-0">Full-Stack Teaching Assistamt</h3>
             <div class="subheading mb-3">2U/Trilogy Education Services</div>
 
-            <h5>Teaching Assistant, Dec. 2020 - Present</h5>
-            <p style="font-style: italic;">University of California, Berkeley</p>
+            <h5>Teaching Assistant<span style="font-weight: 100;">/ December 2020 - Present</span></h5>
+            <p style="font-style: oblique;">University of California, Berkeley</p>
             <ul>
               <li>
                 Provide support and guidance to students attending University of California Full-Stack Web Development
@@ -132,8 +132,8 @@
             </ul>
 
 
-            <h5>Learning Assistant, Mar. 2020 - Present</h5>
-            <p style="font-style: italic;">International Support</p>
+            <h5>Learning Assistant<span style="font-weight: 100;">/ March 2020 - Present</span></h5>
+            <p style="font-style: oblique;">International Support</p>
             <ul>
               <li>Utilize Beta Slack support application (Trilobot) to provide written technical and conceptual
                 responses to student
@@ -145,8 +145,8 @@
               </li>
             </ul>
 
-            <h5>Teaching Assistant, Mar. 2020 – Nov. 2020</h5>
-            <p style="font-style: italic;">University of California, Berkeley</p>
+            <h5>Teaching Assistant<span style="font-weight: 100;">/ March 2020 - November 2020</span></h5>
+            <p style="font-style: oblique;">University of California, Berkeley</p>
             <ul>
               <li>Maintained professional relationships with students and instructional staff at UC Berkeley for
                 full-stack web
@@ -201,24 +201,24 @@
         <h2 class="mb-5">Projects</h2>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"><a href="https://github.com/VolksRat71/advancedReact" target="_blank" data-container="body"
+            <h3 class="mb-0"><a href="https://github.com/VolksRat71/NOT_SUPREME" target="_blank" data-container="body"
                 data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Link to Repository">
                 NOT SUPREME</a></h3>
-            <div class="subheading mb-3">React, Apollo Client, GraphQL Yoga, Prisma ORM & DB</div>
+            <div class="subheading mb-3" style="font-style: oblique;">React, Apollo Client, GraphQL Yoga, Prisma ORM &
+              DB, Jest, Enzyme</div>
             <ul>
               <li>Developing a Full-Stack online clothing store complete with real credit checkout
               </li>
-              <li>Users can search, sell, add to cart and checkout their favorite items</li>
-              <li>Application features many server-side functionalities such as JSON Web Tokens, permissions, sending
-                emails,
-                uploading images, and charging credit cards</li>
+              <li>Application featuring testing frameworks, Jest and Enzyme, for unit and Component testing</li>
+              <li>Featuring many server-side functionalities such as, JSON Web Tokens, permissions, sending email,
+                uploading images, and charging credit cards using Stripe</li>
             </ul>
             <br>
             <h3 class="mb-0"><a href="https://github.com/VolksRat71/DJI_drone_controller" target="_blank"
                 data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover"
                 data-content="Link to Repository">
                 DJI Drone Controller</a></h3>
-            <div class="subheading mb-3">React, Node, Socket.io</div>
+            <div class="subheading mb-3" style="font-style: oblique;">React, Node, Socket.io</div>
             <ul>
               <li>Application creates communication between the drones I.P Address, Node Server, and React User
                 interface</li>
