rewriting skills section and cutting some fat :)

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
               engineering. Specific areas of study include Javascript functionality in HTML and CSS with training in
               MySQL and Mongo
               databases.</p>
-            <i class="fa fa-chevron-down" aria-hidden="true"><a class="js-scroll-trigger" href="#awards"></i>
-            Check out my certifications too!</a>
+            <!-- <i class="fa fa-chevron-down" aria-hidden="true"><a class="js-scroll-trigger" href="#awards"></i>
+            Check out my certifications too!</a> -->
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2019 - September 2019</span>
@@ -240,112 +240,131 @@
         <ul class="list-inline dev-icons">
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="HTML5">
-            <i class="fab fa-html5"></i>
+            <img height="50px" src="./img/logos/HTML.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="CSS3">
-            <i class="fab fa-css3-alt"></i>
+            <img height="50px" src="./img/logos/CSS.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="JavaScript">
-            <i class="fab fa-js-square"></i>
+            data-trigger="hover" data-content="React/React Native">
+            <img height="50px" src="./img/logos/React.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="React.js">
-            <i class="fab fa-react"></i>
+            data-trigger="hover" data-content="Redux">
+            <img height="50px" src="./img/logos/Redux.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Bootstrap">
+            <img height="50px" src="./img/logos/Bootstrap.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Materialize">
+            <img height="50px" src="./img/logos/Materialize.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Styled-Components">
+            <img height="50px" src="./img/logos/Styled-Components.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="SCSS">
+            <img height="50px" src="./img/logos/SCSS.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Handlebars.js">
+            <img height="50px" src="./img/logos/HandleBars.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="jQuery">
+            <img height="50px" src="./img/logos/jQuery.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Node.js">
-            <i class="fab fa-node"></i>
+            <img height="50px" src="./img/logos/Node.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Express.js">
-            <i class="devicon-express-original-wordmark"></i>
+            <img height="50px" src="./img/logos/Expressjs.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="NPM">
-            <i class="fab fa-npm"></i>
+            data-trigger="hover" data-content="Next.js">
+            <img height="50px" src="./img/logos/Nextjs.png" />
           </li>
-
-          <!-- Color hover patches for the time being! -->
-          <li onmouseover="this.style.color='#BD5D38'" onmouseout="this.style.color='#868e96'" class="list-inline-item"
-            data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Redux">
-            <span class="iconify" data-icon="simple-icons:redux" data-inline="false"></span>
-          </li></a>
-          <li onmouseover="this.style.color='#BD5D38'" onmouseout="this.style.color='#868e96'" class="list-inline-item"
-            data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover"
-            data-content="GraphQL">
-            <span class="iconify" data-icon="simple-icons:graphql" data-inline="false"></span>
-          </li>
-          <li onmouseover="this.style.color='#BD5D38'" onmouseout="this.style.color='#868e96'" class="list-inline-item"
-            data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Apollo">
-            <span class="iconify" data-icon="file-icons:apollo" data-inline="false"></span>
-          </li>
-          <li onmouseover="this.style.color='#BD5D38'" onmouseout="this.style.color='#868e96'" class="list-inline-item"
-            data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Prisma">
-            <span class="iconify" data-icon="file-icons:prisma" data-inline="false"></span>
-          </li>
-          <!-- End of patches -->
-
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="MySQL">
-            <i class="devicon-mysql-plain"></i>
+            data-trigger="hover" data-content="GraphQL">
+            <img height="50px" src="./img/logos/GraphQL.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Apollo Client">
+            <img height="50px" src="./img/logos/Apollo.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="JSON Web Tokens">
+            <img height="50px" src="./img/logos/JWT.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Socket.io">
+            <img height="50px" src="./img/logos/Socket.io.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Nodemailer">
+            <img height="50px" src="./img/logos/Nodemailer.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Stripe API">
+            <img height="50px" src="./img/logos/Stripe.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="MongoDB">
-            <i class="devicon-mongodb-plain"></i>
+            <img height="50px" src="./img/logos/MongoDB.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="Slack">
-            <i class="fab fa-slack"></i>
+            data-trigger="hover" data-content="MySQL">
+            <img height="50px" src="./img/logos/MySQL.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="Github">
-            <i class="fab fa-github"></i>
+            data-trigger="hover" data-content="Firebase">
+            <img height="50px" src="./img/logos/Firebase.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="Gitlab">
-            <i class="fab fa-gitlab"></i>
+            data-trigger="hover" data-content="Prisma ORM & DB">
+            <img height="50px" src="./img/logos/Prisma.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="Git Bash">
-            <i class="fab fa-git-alt"></i>
+            data-trigger="hover" data-content="Sequilize">
+            <img height="50px" src="./img/logos/Sequilize.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="MS-CMD/DOS">
-            <i class="fas fa-terminal"></i>
+            data-trigger="hover" data-content="Jest Test Framework">
+            <img height="50px" src="./img/logos/Jest.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Enzyme Test Framework">
+            <img height="50px" src="./img/logos/Enzyme.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Mocha Test Framework">
+            <img height="50px" src="./img/logos/Mocha.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Chai Test Framework">
+            <img height="50px" src="./img/logos/Chai.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Git">
+            <img height="50px" src="./img/logos/Git.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="GitHub Pages">
+            <img height="50px" src="./img/logos/GitHubPages.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Heroku">
-            <i class="devicon-heroku-original"></i>
+            <img height="50px" src="./img/logos/Heroku.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="Windows 10">
-            <i class="fab fa-windows"></i>
-          </li>
-          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="Ubuntu LTS">
-            <i class="fab fa-ubuntu"></i>
-          </li>
-        </ul>
-
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design
-          </li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging
-          </li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams
-          </li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum
+            data-trigger="hover" data-content="Chrome Dev Tools">
+            <img height="50px" src="./img/logos/ChromeDevTools.png" />
           </li>
         </ul>
       </div>
@@ -377,7 +396,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Certifications &amp; Accomplishments</h2>
         <ul class="fa-ul mb-0">
@@ -408,7 +427,7 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
   </div>
 
