--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="subheading mb-3" style="font-style: oblique;">React, Apollo Client, GraphQL Yoga, Prisma ORM &
               DB, Jest, Enzyme</div>
             <ul>
-              <li>Developing a Full-Stack online clothing store complete with real credit checkout
+              <li>Independently developed a Full-Stack online clothing store complete with real credit checkout
               </li>
               <li>Application featuring testing frameworks, Jest and Enzyme, for unit and Component testing</li>
               <li>Featuring many server-side functionalities such as, JSON Web Tokens, permissions, sending email,
