--- a/index.html
+++ b/index.html
@@ -255,6 +255,10 @@
             <img height="50px" src="./img/logos/Redux.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Webpack">
+            <img height="50px" src="./img/logos/Webpack.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Bootstrap">
             <img height="50px" src="./img/logos/Bootstrap.png" />
           </li>
