--- a/index.html
+++ b/index.html
@@ -247,6 +247,10 @@
             <img height="50px" src="./img/logos/CSS.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="JavaScript ES6">
+            <img height="50px" src="./img/logos/JavaScript.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="React/React Native">
             <img height="50px" src="./img/logos/React.png" />
           </li>
