--- a/index.html
+++ b/index.html
@@ -339,6 +339,10 @@
             <img height="50px" src="./img/logos/Prisma.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Mongoose">
+            <img height="50px" src="./img/logos/Mongoose.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Sequilize">
             <img height="50px" src="./img/logos/Sequilize.png" />
           </li>
