--- a/index.html
+++ b/index.html
@@ -296,6 +296,10 @@
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Next.js">
+            <img height="50px" src="./img/logos/Gatsby.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Gatsby">
             <img height="50px" src="./img/logos/Nextjs.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
@@ -321,6 +325,10 @@
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Stripe API">
             <img height="50px" src="./img/logos/Stripe.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Sanity Headless CMS">
+            <img height="50px" src="./img/logos/Sanity.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="MongoDB">
