updating CV and Projects section

--- a/index.html
+++ b/index.html
@@ -201,9 +201,25 @@
         <h2 class="mb-5">Projects</h2>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0"><a href="https://github.com/VolksRat71/NatesTacoShack" target="_blank"
+                data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover"
+                data-content="Link to Repository">
+                Nates Taco Shack</a> / <a href="https://eager-aryabhata-2f82dc.netlify.app/"><span
+                  style="font-weight: 100;">Deployed App</span></a></h3>
+            <div class="subheading mb-3" style="font-style: oblique;">Gatsby Serverless App, Sanity Headless CMS,
+              GraphQL, Progressive Images, Scoped CSS
+            </div>
+            <ul>
+              <li>Independently developed a Serverless Business application with Headless CMS with React GUI
+              </li>
+              <li>Application featuring Client GraphiQL, Custom Hooks, Pagination, Dynamic Pages, Content Digest API
+                provided via Gatsby, and many more</li>
+            </ul>
+            <br>
             <h3 class="mb-0"><a href="https://github.com/VolksRat71/NOT_SUPREME" target="_blank" data-container="body"
                 data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Link to Repository">
-                NOT SUPREME</a></h3>
+                NOT SUPREME</a> / <a href="https://notsupreme-next-prod.herokuapp.com/"><span
+                  style="font-weight: 100;">Deployed App</span></a></h3>
             <div class="subheading mb-3" style="font-style: oblique;">React, Apollo Client, GraphQL Yoga, Prisma ORM &
               DB, Jest, Enzyme</div>
             <ul>
@@ -217,7 +233,9 @@
             <h3 class="mb-0"><a href="https://github.com/VolksRat71/DJI_drone_controller" target="_blank"
                 data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover"
                 data-content="Link to Repository">
-                DJI Drone Controller</a></h3>
+                DJI Drone Controller</a> / <a href="https://dji-drone-example.herokuapp.com/"><span
+                  style="font-weight: 100;">Deployed App</span></a>
+            </h3>
             <div class="subheading mb-3" style="font-style: oblique;">React, Node, Socket.io</div>
             <ul>
               <li>Application creates communication between the drones I.P Address, Node Server, and React User
@@ -415,39 +433,6 @@
     </section>
 
     <hr class="m-0">
-
-    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
-      <div class="w-100">
-        <h2 class="mb-5">Certifications &amp; Accomplishments</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="https://github.com/VolksRat71/certs/blob/master/Advanced_QL.pdf" target="_blank"
-              data-toggle="popover" data-placement="left" data-trigger="hover" data-content="View Credential">Advanced
-              React &
-              GraphQL </a> - BosType Inc. May 2020
-          </li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="https://github.com/VolksRat71/certs/blob/master/ES6_Basics.pdf" target="_blank"
-              data-toggle="popover" data-placement="left" data-trigger="hover" data-content="View Credential">Modern
-              JavaScript
-              ES6 Basics </a> - Coursera Course Certificates June 2020
-          </li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="https://github.com/VolksRat71/certs/blob/master/Responsive_Website_Basics.pdf" target="_blank"
-              data-toggle="popover" data-placement="left" data-trigger="hover" data-content="View Credential">Responsive
-              Website Basics </a> - University of London June 2020
-          </li>
-          <li>
-            <i class="fa-li fa fa-chevron-up" aria-hidden="true"></i>
-            <a class="js-scroll-trigger" href="#education">Check out my education too!
-            </a> - University of Oregon September 2019
-          </li>
-        </ul>
-      </div>
-    </section> -->
 
   </div>
 
