--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Full-Stack Teaching Assistamt</h3>
+            <h3 class="mb-0">Full-Stack Teaching Assistant</h3>
             <div class="subheading mb-3">2U/Trilogy Education Services</div>
 
             <h5>Teaching Assistant<span style="font-weight: 100;">/ December 2020 - Present</span></h5>
@@ -127,7 +127,7 @@
                 one-on-one or in a small group
               </li>
               <li>
-                Lead class reviews, discussions, and whiteboarding challenges to ensure students gain employer
+                Lead class reviews, discussions, and white-boarding challenges to ensure students gain employer
                 competitive skills </li>
             </ul>
 
