adding new project :)

--- a/index.html
+++ b/index.html
@@ -201,6 +201,27 @@
         <h2 class="mb-5">Projects</h2>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0"><a href="https://github.com/VolksRat71/AutoArbi-Trader" target="_blank"
+                data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover"
+                data-content="Link to Repository">
+                Auto Arbi-Trader </a> / <a href="https://desolate-hollows-77552.herokuapp.com/"><span
+                  style="font-weight: 100;">Deployed App</span></a></h3>
+            <div>🏆<span style="font-style: oblique;">2nd
+                Place for Anvil Challenge,
+                DeveloperWeek 2021</span>🏆
+            </div>
+            <div class="subheading mb-3" style="font-style: oblique;">Anvil, TypingDNA, Material UI, React, Node, SQL,
+              Bcrypt, Cloudinary
+            </div>
+            <ul>
+              <li>With a team of 2 developers, and 1 graphic designer, created a fully functioning beta in a week and a
+                half
+              </li>
+              <li>Application features Anvil PDF generation, TypingDNA biometric authentication, and in app viewable
+                PDFs via Cloudinary</li>
+              <li>Designed as a futuristic take on vehicle documentation and ownership transfer</li>
+            </ul>
+            <br>
             <h3 class="mb-0"><a href="https://github.com/VolksRat71/NatesTacoShack" target="_blank"
                 data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover"
                 data-content="Link to Repository">
