adding new link :)

--- a/index.html
+++ b/index.html
@@ -205,7 +205,10 @@
                 data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover"
                 data-content="Link to Repository">
                 Auto Arbi-Trader </a> / <a href="https://desolate-hollows-77552.herokuapp.com/"><span
-                  style="font-weight: 100;">Deployed App</span></a></h3>
+                  style="font-weight: 100;">Deployed App</span></a> / <a
+                href="https://www.useanvil.com/blog/2021-03-02-developer-week-hackathon-winners#auto-arbi-trader---anvil-hackathon-runner-up"><span
+                  style="font-weight: 100;">Anvil Blog
+                  Feat.</span></a></h3>
             <div>🏆<span style="font-style: oblique;">2nd
                 Place for Anvil Challenge,
                 DeveloperWeek 2021</span>🏆
