--- a/index.html
+++ b/index.html
@@ -309,6 +309,10 @@
             <img height="50px" src="./img/logos/Bootstrap.png" />
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="MaterialUI">
+            <img height="50px" src="./img/logos/MaterialUI.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Materialize">
             <img height="50px" src="./img/logos/Materialize.png" />
           </li>
@@ -427,6 +431,18 @@
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Chrome Dev Tools">
             <img height="50px" src="./img/logos/ChromeDevTools.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Anvil API">
+            <img height="50px" src="./img/logos/AnvilAPI.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Cloudinary API">
+            <img height="50px" src="./img/logos/CloudinaryAPI.png" />
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Typing DNA API">
+            <img height="50px" src="./img/logos/TypingDNAAPI.png" />
           </li>
         </ul>
       </div>
